Prototype TOCS database designs

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -53,7 +53,7 @@
 									<span class="image">
 										<img src=" {% static 'images/pic01.jpg' %} " alt="" />
 									</span>
-									<a href="">
+									<a href="/tocs">
 										<h2>Trails of Cold Steel Enemy Database</h2>
 										<div class="content">
 											<p>Coming soon</p>
