--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -10,7 +10,12 @@
 
 {% block content %}
     <div class="viewport">
-        {% include 'header.html' %}
+        <header>
+           <h1 class="page-title">TOCS Enemy Database</h1>
+           <div class="path">{{ path }}</div>
+           <a href="/" class="back-button"><i class="fas fa-arrow-left"></i> Back</a>
+        </header>
+
         <div class="users-container">
             {% for places in location %}
                 <button type="button" class="collapsible">{{ places.name }}</button>
@@ -27,7 +32,7 @@
                         {% for monster in enemy %}
                         {% if places.name == monster.location.name %}
                         <tr>
-                            <td class="user-name"><span>{{ monster.name }}</span></td>
+                            <td class="user-name"><a href="{{ monster.id }}"><span>{{ monster.name }}</span></a></td>
                             <td class="user-title"><span>{{ monster.location }}</span></td>
                             <td class="user-location"><span>{{ monster.level }}</span></td>
                         </tr>
