--- a/main/template/index.html
+++ b/main/template/index.html
@@ -4,6 +4,7 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+
 <html>
 {% load static %}
 	<head>
@@ -35,8 +36,11 @@
 						<ul>
 							<li><a href="">Home</a></li>
 							<li><a href="">About Me</a></li>
+<!--							TODO: Create 'About me' Page-->
 							<li><a href="">Projects</a></li>
+<!--							TODO: Create 'Projects' Page-->
 							<li><a href="">Contact</a></li>
+<!--							TODO: Create 'Contact' Page-->
 						</ul>
 					</nav>
 
@@ -45,17 +49,20 @@
 						<div class="inner">
 							<header>
 								<h1>Welcome to Matthew Turner's Portfolio.</h1><br />
+<!--								TODO: Change to actual subheader-->
 								<h3>Website currently under construction.</h3>
 								<p>Projects:</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
+<!--									TODO: Remove cross from image-->
 									<span class="image">
 										<img src=" {% static 'images/pic01.jpg' %} " alt="" />
 									</span>
 									<a href="/tocs">
 										<h2>Trails of Cold Steel Enemy Database</h2>
 										<div class="content">
+											<!--TODO: Change/delete subheader.-->
 											<p>Coming soon</p>
 										</div>
 									</a>
@@ -123,6 +130,7 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
+<!--								TODO: Add form functionality-->
 								<h2>Get in touch</h2>
 								<form method="post" action="#">
 									<div class="fields">
@@ -143,6 +151,7 @@
 							</section>
 							<section>
 								<h2>Follow</h2>
+<!--								TODO: Fill out section, also, figure out what happened to the icons-->
 								<ul class="icons">
 									<li><a href="" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
@@ -151,6 +160,7 @@
 								</ul>
 							</section>
 							<ul class="copyright">
+<!--								TODO: Actually put copyright info here-->
 								<li>&copy; All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
