--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -1,7 +1,7 @@
 {% extends 'layout.html' %}
 {% load static %}
-
-
+<!--TODO: Rename classes/profiles-->
+<!--TODO: Figure out why title of page is 'test'-->
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/users.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/get.css' %}" type="text/css" />
@@ -13,6 +13,7 @@
         <header>
            <h1 class="page-title">TOCS Enemy Database</h1>
            <div class="path">{{ path }}</div>
+            <!--TODO: This should lead back to the 'projects' page-->
            <a href="/" class="back-button"><i class="fas fa-arrow-left"></i> Back</a>
         </header>
 
@@ -33,6 +34,7 @@
                         {% if places.name == monster.location.name %}
                         <tr>
                             <td class="user-name"><a href="{{ monster.id }}"><span>{{ monster.name }}</span></a></td>
+                            <!--TODO: Create page for location view-->
                             <td class="user-title"><span>{{ monster.location }}</span></td>
                             <td class="user-location"><span>{{ monster.level }}</span></td>
                         </tr>
