--- a/tocs_database/templates/users.html
+++ b/tocs_database/templates/users.html
@@ -2,6 +2,7 @@
 {% load static %}
 <!--TODO: Rename classes/profiles-->
 <!--TODO: Figure out why title of page is 'test'-->
+<!--TODO: Change Color Scheme-->
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'css/users.css' %}" type="text/css" />
     <link rel="stylesheet" href="{% static 'css/get.css' %}" type="text/css" />
