Added copyright information to generic.html and index.html

--- a/main/template/index.html
+++ b/main/template/index.html
@@ -182,8 +182,16 @@
 								</ul>
 							</section>
 							<ul class="copyright">
-<!--								TODO: Actually put copyright info here-->
-								<li>&copy; All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+									<div class="copyright" align="center">
+									  <script>
+										document.write('&copy;' );
+										document.write(' 2021 - ');
+										document.write(new Date().getFullYear());
+										document.write(' mturner.me - All Rights Reserved.');
+										document.write('<br/>Last Updated : ');
+										document.write(document.lastModified);
+									  </script>
+									</div>
 							</ul>
 						</div>
 					</footer>
